# gltesttasks

Bulls_and_cows_v2.0/: Bulls_and_Cows_v2.0.cpp  CMakeLists.txt
Client-Server/Client/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Client-Server/server/: main.cpp  myserver.cpp  myserver.h  server.pro
Flavius`s_Task/: Flavius`s_Task.sln  Flavius`s_Task.vcxproj  Source.cpp
Flavius`s_Task/Debug/: Flavius`s_Task.exe.recipe  Flavius`s_Task.ilk  Flavius`s_Task.vcxproj.FileListAbsolute.txt  source.obj.enc  vc142.idb
Flavius`s_Task/Debug/Flavius`s_Task.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Flavius`s_Task.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Flavius`s_Task_v2/: CMakeLists.txt  Flavius`s_Task_v2.cpp
TerminalTetris/: Tetris.cpp
Tetris/: Element.qml  Init.qml  Init_Board.qml  Initboard.qml  Labels.qml  Rect_of_element.qml  Rectofelement.qml  Rects.qml  main.cpp  main.qml  qml.qrc
UI_Tortoise_and_Hare/: CMakeLists.txt  Line.qml  Member.qml  main.cpp  main.qml  qml.qrc  ui.cpp  ui.h  uitrack.cpp  uitrack.h
UI_Tortoise_and_Hare/race-simulation/: CMakeLists.txt  main.cpp
UI_Tortoise_and_Hare/race-simulation/race-simulation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
UI_Tortoise_and_Hare/race-simulation/race-simulation/common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
UI_Tortoise_and_Hare/race-simulation/race-simulation/common/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-rs-common[1]_include.cmake
UI_Tortoise_and_Hare/race-simulation/race-simulation/race/: CTestTestfile.cmake  Makefile  cmake_install.cmake
UI_Tortoise_and_Hare/race-simulation/race-simulation/race/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-rs-race[1]_include.cmake
UI_Tortoise_and_Hare/race-simulation/race-simulation/track/: CTestTestfile.cmake  Makefile  cmake_install.cmake
UI_Tortoise_and_Hare/race-simulation/track/: CMakeLists.txt
UI_Tortoise_and_Hare/race-simulation/track/include/: Track.h
output_log_every_second/: CMakeLists.txt  service.cpp
